<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <LinearLayout
        android:id="@+id/authenticateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_round_white"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <ProgressBar
            android:id="@+id/progressCircle1"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/progress"
            android:visibility="invisible"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_6sdp"
            android:text="البريد الإلكتروني الحالي"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:id="@+id/inputCurrentEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="@dimen/_8sdp"
            android:text="@string/example_gmail_com"
            android:textAlignment="textEnd"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_6sdp"
            android:text="@string/passwordText"
            android:textSize="@dimen/_16sdp" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:padding="@dimen/_8sdp"
            android:textAlignment="textEnd"
            android:textColor="@color/colorBlackLight"
            android:textDirection="rtl" />

        <Button
            android:id="@+id/btnAuthenticate"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/border_round"

            android:text="تحقق"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/updateEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_round_white"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressCircle2"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/progress"
            android:visibility="invisible"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_6sdp"
            android:text="البريد الإلكتروني الجديد"
            android:textSize="@dimen/_16sdp" />

        <EditText
            android:id="@+id/NewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:hint="@string/example_gmail_com"
            android:inputType="textEmailAddress"
            android:layoutDirection="rtl"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/colorBlackLight"
            android:textDirection="rtl" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/border_round"
            android:text="تحديث"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@null"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>